--- a/style.css
+++ b/style.css
@@ -1,11 +1,13 @@
+/* Main Items */
+
 .BG {
     background-color: hsl(217, 54%, 11%);
 }
 
 .cardBG{
     background-color: hsl(216, 50%, 16%);
-    height: 500px;
-    width: 500px;
+    height: 700px;
+    width: 400px;
     border-radius: 20px;
     position: relative;
     margin: 0 auto;
@@ -13,11 +15,110 @@
 }
 
 .ethMainPic {
-    outline: red 1px solid;
     position: relative;
     z-index: 1;
-    border-radius: 20px;
-    width: 200px;
-    height: 200px;
+    border-radius: 10px;
+    height: 350px;
+    margin: 25px 25px;
 
+}
+
+.underPicture{
+    margin-top: -10px;
+}
+
+.header {
+    color: white;
+    font-family: 'Outfit', sans-serif;
+    font-size: 26px;
+    font-weight: 600;
+    margin-left: 25px;
+    margin-top: 10px;
+
+}
+
+.description {
+    position: relative;
+    color: hsl(215, 51%, 70%);
+    font-family: Outfit, sans-serif;
+    font-size: 20px;
+    font-weight: 400;
+    margin-left: 25px;
+    margin-top: 10px;
+
+}
+
+
+
+
+/* Ethereum Icons and Text */
+
+.ethLogo {
+    position: relative;
+    width: 12px;
+    margin-left: 25px;
+    margin-top: 15px;
+
+}
+
+.ethPrice {
+    position: relative;
+    color: hsl(178, 100%, 50%);
+    font-family: Outfit, sans-serif;
+    font-weight: 600;
+    font-size: 20px;
+    display: inline-block;
+    padding-left: 10px;
+}
+
+.ethClock {
+    display: inline-block;
+    position: relative;
+    width: 20px;
+    margin-left: 80px;
+
+}
+
+.ethTimeText {
+    display: inline-block;
+    position: relative;
+    color: white;
+    font-family: Outfit, sans-serif;
+    font-weight: 600;
+    font-size: 20px;
+    padding-left: 10px;
+}
+
+
+
+
+/* User Styling - Probably need to change to flex properties*/
+
+.userContainer {
+    margin-top: 10px;
+}
+
+.userImage{
+    display: inline-block;
+    border: 1px solid white;
+    border-radius: 100px;
+    width: 40px;
+    height: 40px;
+    margin-right: 10px;
+    margin-left: 20px;
+
+}
+
+.User{
+    position: relative;
+    color: hsl(215, 51%, 70%);
+    font-family: 'Outfit', sans-serif;
+    font-weight: 700;
+    font-size: 18px;
+    display: inline-block;
+    margin-left: 5px;
+}
+
+#whiteName {
+    color: white;
 }
