--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
     background-color: hsl(217, 54%, 11%);
 }
 
-.cardBG{
+.cardBG {
     background-color: hsl(216, 50%, 16%);
     height: 700px;
     width: 400px;
@@ -31,17 +31,29 @@
     right: 0;
     scale: 1.5;
     opacity: 0;
-    transition: .3s ease;
+    transition: .1s ease;
     z-index: 2;
     cursor: pointer;
 
 }
 
-.ethMainPic:hover .overlay{
-    opacity: 1;
+.testColor {
+    width: 100%;
+    height: 100%;
+    z-index: 3;
 }
 
-.underPicture{
+.test:hover .overlay {
+    opacity: 1;
+
+}
+
+.test:hover .testColor {
+    background-color: red;
+
+}
+
+.underPicture {
     margin-top: -10px;
 }
 
@@ -67,15 +79,12 @@
 }
 
 
-
-
 /* Ethereum Icons and Text */
 
 .ethLogo {
     position: relative;
     width: 12px;
     margin-left: 25px;
-    margin-top: 15px;
 
 }
 
@@ -107,16 +116,21 @@
     padding-left: 10px;
 }
 
+.ethContainer {
+    display: inline-flex;
+    align-items: center;
+}
 
 
-
-/* User Styling - Probably need to change to flex properties*/
+/* User Styling */
 
 .userContainer {
+    display: inline-flex;
+    align-items: center;
     margin-top: 10px;
 }
 
-.userImage{
+.userImage {
     display: inline-block;
     border: 1px solid white;
     border-radius: 100px;
@@ -127,7 +141,7 @@
 
 }
 
-.User{
+.User {
     position: relative;
     color: hsl(215, 51%, 70%);
     font-family: 'Outfit', sans-serif;
@@ -139,4 +153,5 @@
 
 #whiteName {
     color: white;
+
 }
